fix: overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,7 +7,8 @@
 body {
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
   color: #fff;
   background-color: #0e1c2d;
 }
